@@ -31,11 +31,10 @@ namespace LHAPDF {
     PDFSet(const std::string& setname) {
       _setname = setname;
       const path setinfopath = findpdfsetinfopath(setname);
-      // std::cout << setinfopath.string() << std::endl;
-      /// @todo Complain if the set info file has not been found? Is that mandatory?
-      if (exists(setinfopath)) load(setinfopath);
-      /// @todo Check that some mandatory metadata keys have been set? _check() function.
-      /// @todo If not, try to guess some info or just exit?
+      if (!exists(setinfopath))
+        throw ReadError("Data file not found for PDF set '" + setname + "'");
+      load(setinfopath);
+      /// @todo Check that some mandatory metadata keys have been set: _check() function.
     }
 
     //@}
